<resources>
    <string name="app_name">绿岛风智联</string><!-- 全热新风交换机--><!-- 绿岛风智能生活-->

    <string name="activity_login_forgotpwd_txt">忘记密码</string>
    <string name="activity_login_register_txt"><![CDATA[注 册]]></string>
    <string name="activity_login_sent_txt"><![CDATA[登 陆]]></string>
    <string name="activity_forgotpwd_sure_txt"><![CDATA[确 认]]></string>
    <string name="activity_login_pwd_txt"><![CDATA[密         码 :]]></string>
    <string name="activity_login_phone_txt">手机号码 :</string>
    <string name="activity_login_pwd_prompt_txt">请输入密码</string>
    <string name="activity_login_phone_prompt_txt">请输入手机号码</string>
    <string name="activity_register_back_tv">返回</string>
    <string name="activity_register_pwd_long_tv">6位以上</string>
    <string name="activity_register_invalid_tv"><![CDATA[验   证   码:]]></string>
    <string name="activity_register_invalid_prompt_txt">请输入验证码</string>
    <string name="activity_register_send_invalid_txt">发送验证码</string>
    <string name="activity_register_welcome_prompt">欢迎注册使用！</string>
    <string name="activity_forgot_title_txt">找回密码</string>
    <string name="activity_forgotpwd_sure_pwd_tv">确认密码 :</string>
    <string name="activity_forgotpwd_sure_pwd_prompt_txt">确认密码</string>
    <string name="activity_forgot_sure_pwd_prompt_error_txt">输入有误</string>
    <string name="activity_find_pwd_success_tv">已成功重置密码！</string>
    <string name="activity_find_pwd_back_txt">返回登录</string>
    <string name="fragment_personal_center_title_txt">个人中心</string>
    <string name="fragment_personal_center_exit_txt">退出</string>
    <string name="fragment_personal_center_update_pwd_txt">修改密码</string>
    <string name="fragment_personal_center_msg_center_txt">消息中心</string>
    <string name="fragment_personal_center_information_txt">个人信息</string>
    <string name="fragment_personal_center_phone_txt">15689445586</string>
    <string name="fragment_personal_center_name_txt">小风XF</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_version">v0.3.4.6</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="spinnerTaskResultCountTitle">Task result count</string>
    <string name="btnConfirmTitle">Confirm</string>


    <string name="cp_select_city">选择城市</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="cp_located_city">定位城市</string>
    <string name="cp_hint_search_box">城市名或拼音</string>
    <string name="cp_nothing_found">没有搜索结果~</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="cp_btn_cancel">取消</string>
</resources>
