<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:weightSum="1.2"
        android:orientation="vertical"
        android:background="@drawable/title_bar_bg"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"></RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <TextView
            android:id="@+id/activity_register_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back_icon"
            android:text="@string/activity_register_back_tv"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="3dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/activity_login_register_txt"
            android:layout_centerInParent="true"
            />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.8"
        android:layout_marginLeft="30dp"
        android:padding="30dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:src="@drawable/phone_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                />
            <TextView
                android:id="@+id/phone_txt"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_phone_txt"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/phone_icon"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/activity_register_phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/phone_txt"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:hint="@string/activity_login_phone_prompt_txt"
                android:inputType="number"
                android:textSize="13sp"
                android:layout_marginRight="30dp"
                />
            <ImageView
                android:id="@+id/activity_register_remove_phone_iv"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/input_phone_error_prompt"
                android:layout_marginRight="20dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            android:layout_marginRight="30dp"
            ></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <ImageView
                android:id="@+id/pwd_icon"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:src="@drawable/pwd_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                />
            <TextView
                android:id="@+id/pwd_txt"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_pwd_txt"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/pwd_icon"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/activity_register_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/pwd_txt"
                android:background="@null"
                android:hint="@string/activity_login_pwd_prompt_txt"
                android:textSize="13sp"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/activity_register_pwd_long_tv"
                android:textColor="@color/activity_login_forgotpwd"
                android:textSize="10sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            android:layout_marginRight="30dp"
            ></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <ImageView
                android:id="@+id/invalid_icon"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:src="@drawable/invalid_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                />
            <TextView
                android:id="@+id/invalid_txt"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_register_invalid_tv"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/invalid_icon"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/activity_register_invalid_et"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/invalid_txt"
                android:background="@null"
                android:hint="@string/activity_register_invalid_prompt_txt"
                android:textSize="13sp"
                android:inputType="text"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:layout_marginRight="30dp"
                />
            <Button
                android:id="@+id/activity_register_send_btn"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/activity_register_send_invalid_txt"
                android:textColor="@color/activity_login_forgotpwd"
                android:textSize="10sp"
                android:background="@drawable/send_invalid_btn"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            android:layout_marginRight="30dp"
            ></RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        >
        <RelativeLayout
            android:id="@+id/activity_register_sent_rl"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/login_btn"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_register_txt"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_welcome_prompt"
            android:textColor="@color/shen_gray"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/activity_register_sent_rl"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/find_pwd_bottom_line"
            />
    </RelativeLayout>
</LinearLayout>
