<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:weightSum="1.2"
        android:orientation="vertical"
        android:background="@drawable/title_bar_bg"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"></RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/activity_forgot_title_txt"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        ></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2"
        >

        <ImageView
            android:id="@+id/success_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/resetpwdsuccess_icon"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/success_prompt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_find_pwd_success_tv"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/success_icon" />

        <TextView
            android:id="@+id/back_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_find_pwd_back_txt"
            android:textColor="@color/activity_login_forgotpwd"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/success_prompt_txt"
            />
    </RelativeLayout>
</LinearLayout>
