<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg_up_half_cricle"
        android:layout_marginTop="90dp"
        android:visibility="gone"
        ></RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.4"
        android:background="@drawable/login_phone_icon"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="30dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/white"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp">
            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pwd_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                />
            <TextView
                android:id="@+id/phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_phone_txt"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/phone_icon"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/activity_login_phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/phone_txt"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:hint="@string/activity_login_phone_prompt_txt"
                android:inputType="number"
                android:textSize="13sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            ></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp">
            <ImageView
                android:id="@+id/pwd_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pwd_icon"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                />
            <TextView
                android:id="@+id/pwd_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_pwd_txt"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/pwd_icon"
                android:textSize="13sp"
                />
            <EditText
                android:id="@+id/activity_login_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/pwd_txt"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:hint="@string/activity_login_pwd_prompt_txt"
                android:textSize="13sp"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            ></RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:id="@+id/activity_login_forgotpwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/activity_login_forgotpwd_txt"
                android:layout_centerVertical="true"
                android:textSize="13sp"
                android:textColor="@color/activity_login_forgotpwd"
            />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_login_sent_rl"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/login_btn"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_sent_txt"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textSize="13sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/activity_login_register_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/register_icon"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_register_txt"
                android:textColor="@color/activity_login_forgotpwd"
                android:layout_centerInParent="true"
                android:textSize="13sp"
                />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15px"
            android:background="@color/login_bg"
            android:visibility="gone"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            ></RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="15px"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            ></RelativeLayout>
    </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
