<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/white"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.2"
    >
        <include layout="@layout/top_layout"></include>
    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"></RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/fragment_personal_center_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back_icon"
            android:text="@string/activity_register_back_tv"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:drawablePadding="3dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/fragment_personal_center_title_txt"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>-->
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user_head_bg"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/fragment_personal_center_head_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_head"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:id="@+id/fragment_personal_center_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/fragment_personal_center_name_txt"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/fragment_personal_center_phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_personal_center_name_tv"
                android:textColor="@color/shen_gray"
                android:text="@string/fragment_personal_center_phone_txt"
                android:textSize="12sp"
                />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/fragment_personal_center_info_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="0.8">
        <ImageView
            android:id="@+id/info_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/my_info_icon"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/info_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_personal_center_information_txt"
            android:layout_toRightOf="@+id/info_iv"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:id="@+id/fragment_personal_center_info_right_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/ti_right_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            android:layout_alignLeft="@+id/info_txt"
            android:layout_alignParentBottom="true"
            ></RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_personal_center_msg_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="0.8">
        <ImageView
            android:id="@+id/msg_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_center_icon"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_personal_center_msg_center_txt"
            android:layout_toRightOf="@+id/msg_iv"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <ImageView
            android:id="@+id/fragment_personal_center_msg_right_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/ti_right_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            android:layout_alignLeft="@+id/msg_txt"
            android:layout_alignParentBottom="true"
            ></RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_personal_center_update_pwd_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="0.8">
        <ImageView
            android:id="@+id/update_pwd_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pwd_update_icon"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/update_pwd_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_personal_center_update_pwd_txt"
            android:layout_toRightOf="@+id/update_pwd_iv"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            />
        <ImageView
            android:id="@+id/fragment_personal_center_update_pwd_right_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/ti_right_icon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/shen_gray"
            android:layout_alignLeft="@+id/update_pwd_txt"
            android:layout_alignParentBottom="true"
            ></RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        ></RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        >
        <RelativeLayout
            android:id="@+id/fragment_personal_center_exit_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exit_btn_bg"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_personal_center_exit_txt"
                android:textSize="14sp"
                android:textColor="@color/shen_gray"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
